update MySQL JDBC driver